@@ -13,6 +13,8 @@ import com.dotcms.api.system.event.Visibility;
 import com.dotcms.api.system.event.VisibilityRoles;
 import com.dotcms.api.system.event.verifier.ExcludeOwnerVerifierBean;
 import com.dotcms.api.tree.Parentable;
+import com.dotcms.rest.api.v1.folder.FolderSearchView;
+import com.dotmarketing.util.PaginatedArrayList;
 import com.dotcms.business.CloseDBIfOpened;
 import com.dotcms.business.WrapInTransaction;
 import com.dotcms.content.elasticsearch.business.event.ContentletArchiveEvent;
@@ -48,9 +50,11 @@ import com.dotmarketing.db.DbConnectionFactory;
 import com.dotmarketing.db.FlushCacheRunnable;
 import com.dotmarketing.db.HibernateUtil;
 import com.dotmarketing.exception.DotDataException;
+import com.dotmarketing.exception.DotHibernateException;
 import com.dotmarketing.exception.DotRuntimeException;
 import com.dotmarketing.exception.DotSecurityException;
 import com.dotmarketing.portlets.contentlet.business.ContentletAPI;
+import com.dotmarketing.portlets.contentlet.business.DotReindexStateException;
 import com.dotmarketing.portlets.contentlet.model.Contentlet;
 import com.dotmarketing.portlets.fileassets.business.FileAssetAPI;
 import com.dotmarketing.portlets.fileassets.business.IFileAsset;
@@ -81,6 +85,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.TimeZone;
@@ -154,6 +159,7 @@ public class FolderAPIImpl implements FolderAPI  {
 		return findFolderByPath(path,host,user, respectFrontEndPermissions);
 	}
 
+	@Override
 	@WrapInTransaction
 	public boolean renameFolder(final Folder folder, final String newName,
 								final User user, final boolean respectFrontEndPermissions) throws DotDataException,
@@ -165,22 +171,53 @@ public class FolderAPIImpl implements FolderAPI  {
 			throw new DotSecurityException("User " + (user.getUserId() != null?user.getUserId() : BLANK) + " does not have permission to edit folder " + folder.getPath());
 		}
 
+		// Sanitize user-supplied name before logging to prevent log injection via \r or \n.
+		final String safeNewName = newName.replaceAll("[\\r\\n]", " ");
+		final String safePath = folder.getPath() == null ? null : folder.getPath().replaceAll("[\\r\\n]", " ");
 		try {
 			validateFolderName(folder, newName);
 			renamed = folderFactory.renameFolder(folder, newName, user, respectFrontEndPermissions);
-			CacheLocator.getNavToolCache().removeNav(folder.getHostId(), folder.getInode());
-			Identifier folderId = APILocator.getIdentifierAPI().find(folder.getIdentifier());
-			CacheLocator.getNavToolCache().removeNavByPath(folderId.getHostId(), folderId.getParentPath());
-			return renamed;
+
+			// Nav cache eviction for the folder and sub-tree is handled inside the factory.
+			// NOTE: the factory mutates the passed-in folder: setName(newName) and setModDate()
+			// are updated in place. The identifier and inode are unchanged — the folder retains
+			// its original identity across renames. refreshContentUnderFolder uses the updated
+			// folder name to target the correct new path for the ES reindex.
+			//
+			// Queue async ES reindex. DotReindexStateException is caught here so a transient
+			// reindex-queue failure does not roll back an otherwise successful rename.
+			// DotDataException (DB-layer) is intentionally NOT caught: if the DB itself fails
+			// (e.g. the dist_reindex_journal INSERT fails), the rename transaction should roll back.
+			try {
+				contentletAPI.refreshContentUnderFolder(folder);
+			} catch (final DotReindexStateException e) {
+				Logger.warn(FolderAPIImpl.class, "ES reindex failed after renaming folder '"
+						+ safePath + "' to '" + safeNewName + "': " + e.getMessage());
+			}
+
+			if (renamed) {
+				systemEventsAPI.pushAsync(SystemEventType.UPDATE_FOLDER,
+						new Payload(folder.getMap(), Visibility.EXCLUDE_OWNER,
+								new ExcludeOwnerVerifierBean(user.getUserId(),
+										PermissionAPI.PERMISSION_READ, Visibility.PERMISSION)));
+			}
+  
+      return renamed;
+
 		} catch (InvalidFolderNameException e) {
 			Logger.error(FolderAPIImpl.class, "Error renaming folder '"
-					+ folder.getPath() + "' with id: " + folder.getIdentifier() + " to name: "
-					+ newName + ". Error: " + e.getMessage());
+					+ safePath + "' with id: " + folder.getIdentifier() + " to name: "
+					+ safeNewName + ". Error: " + e.getMessage());
+			throw e;
+		} catch (DotSecurityException e) {
+			Logger.error(FolderAPIImpl.class, "Error renaming folder '"
+					+ safePath + "' with id: " + folder.getIdentifier() + " to name: "
+					+ safeNewName + ". Error: " + e.getMessage());
 			throw e;
 		} catch (Exception e) {
 			Logger.error(FolderAPIImpl.class, "Error renaming folder '"
-					+ folder.getPath() + "' with id: " + folder.getIdentifier() + " to name: "
-					+ newName + ". Error: " + e.getMessage());
+					+ safePath + "' with id: " + folder.getIdentifier() + " to name: "
+					+ safeNewName + ". Error: " + e.getMessage());
 			throw new DotDataException(e.getMessage(),e);
 		}
 	}
@@ -342,10 +379,9 @@ public class FolderAPIImpl implements FolderAPI  {
 			throw new DotSecurityException("User " + (user.getUserId() != null?user.getUserId():BLANK) + " does not have permission to add to Folder " + newParentFolder.getPath());
 		}
 
-		folderFactory.copy(folderToCopy, newParentFolder);
-
-		this.systemEventsAPI.pushAsync(SystemEventType.COPY_FOLDER, new Payload(folderToCopy.getMap(), Visibility.EXCLUDE_OWNER,
-				new ExcludeOwnerVerifierBean(user.getUserId(), PermissionAPI.PERMISSION_READ, Visibility.PERMISSION)));
+		final Map<String, Object> sourceFields = toEventFields(folderToCopy);
+		final Folder newFolder = folderFactory.copy(folderToCopy, newParentFolder);
+		emitFolderEventOnCommit(SystemEventType.COPY_FOLDER, sourceFields, toEventFields(newFolder), user);
 	}
 
 	@WrapInTransaction
@@ -362,10 +398,9 @@ public class FolderAPIImpl implements FolderAPI  {
 		}
 
 		validateFolderName(folderToCopy);
-		folderFactory.copy(folderToCopy, newParentHost);
-
-		this.systemEventsAPI.pushAsync(SystemEventType.COPY_FOLDER, new Payload(folderToCopy.getMap(), Visibility.EXCLUDE_OWNER,
-				new ExcludeOwnerVerifierBean(user.getUserId(), PermissionAPI.PERMISSION_READ, Visibility.PERMISSION)));
+		final Map<String, Object> sourceFields = toEventFields(folderToCopy);
+		final Folder newFolder = folderFactory.copy(folderToCopy, newParentHost);
+		emitFolderEventOnCommit(SystemEventType.COPY_FOLDER, sourceFields, toEventFields(newFolder), user);
 	}
 
 	@CloseDBIfOpened
@@ -644,13 +679,29 @@ public class FolderAPIImpl implements FolderAPI  {
 		final boolean isNew = folder.getInode() == null;
 		//if the folder was renamed, we will need to create a new identifier
 		if (!folder.getName().equalsIgnoreCase(existingID.getAssetName())){
-			folderFactory.renameFolder(folder, folder.getName(), user, respectFrontEndPermissions);
+			if (!folderFactory.renameFolder(folder, folder.getName(), user, respectFrontEndPermissions)) {
+				throw new DotDataException("Could not rename folder '" + existingID.getAssetName()
+						+ "' to '" + folder.getName() + "': a folder with that name already exists.");
+			}
+			// Queue async ES reindex so content under the renamed folder is re-indexed at the new
+			// path. folderFactory.renameFolder() mutates folder.setName(newName), so
+			// folder.getPath() already returns the new path when this runs.
+			// DotReindexStateException is caught to avoid rolling back the save on a transient
+			// reindex-queue failure.
+			try {
+				contentletAPI.refreshContentUnderFolder(folder);
+			} catch (final DotReindexStateException e) {
+				Logger.warn(FolderAPIImpl.class, "ES reindex failed after renaming folder via save(): "
+						+ e.getMessage());
+			}
 		} else{
 			folder.setModDate(new Date());
 			folderFactory.save(folder);
 		}
 
-        // remove folder and parent from navigation cache
+        // Nav cache: folderFactory.renameFolder() already evicts the renamed folder and its
+        // sub-tree. The two calls below are redundant for the rename path but are kept for the
+        // non-rename (else) branch where the factory does not evict nav cache.
 		if (!isNew) {
 			CacheLocator.getNavToolCache().removeNav(folder.getHostId(), folder.getInode());
 			CacheLocator.getNavToolCache()
@@ -753,6 +804,181 @@ public class FolderAPIImpl implements FolderAPI  {
 	@CloseDBIfOpened
 	public List<Folder> findFoldersByHost(Host host, User user, boolean respectFrontendRoles) {
 		return folderFactory.findFoldersByHost(host);
+	}
+
+	@Override
+	@CloseDBIfOpened
+	public PaginatedArrayList<FolderSearchView> searchFolders(final FolderSearchParams params)
+			throws DotDataException, DotSecurityException {
+
+		// Load all matching folders (no LIMIT — pagination happens in Java so that permission
+		// filtering does not produce short pages for limited users), then batch-filter by READ in a
+		// single SQL round-trip for the whole collection.
+		final List<Folder> readable = permissionAPI.filterCollection(
+				folderFactory.searchFolders(params), PermissionAPI.PERMISSION_READ,
+				params.user(), params.respectFrontendRoles());
+
+		final int total = readable.size();
+		final List<Folder> page = paginate(readable, params);
+
+		final PagePermissions permissions = resolvePagePermissions(page, params);
+		final Set<String> parentPathsWithVisibleChildren =
+				findParentPathsWithVisibleChildren(page, params);
+
+		final PaginatedArrayList<FolderSearchView> result = new PaginatedArrayList<>();
+		result.setTotalResults(total);
+		result.addAll(toViews(page, permissions, parentPathsWithVisibleChildren, params));
+		return result;
+	}
+
+	/**
+	 * The permission-id sets resolved for a single page of folders.
+	 *
+	 * <p>{@code canAddIds} is always populated — it backs {@code addChildrenAllowed} whether or not
+	 * permissions were requested. The other three are empty unless
+	 * {@link FolderSearchParams#includePermissions()} is set.
+	 */
+	private record PagePermissions(Set<String> canAddIds, Set<String> editableIds,
+			Set<String> publishableIds, Set<String> editPermissionsIds) {}
+
+	/**
+	 * Slices the requested page out of the permission-filtered collection. Pagination happens here,
+	 * in Java, rather than in SQL so that a limited user does not receive short pages when the
+	 * READ filter removes rows.
+	 */
+	private static List<Folder> paginate(final List<Folder> readable, final FolderSearchParams params) {
+		final int total = readable.size();
+		final int from  = Math.min(params.offset(), total);
+		final int to    = params.limit() < 0 ? total : Math.min(params.offset() + params.limit(), total);
+		return readable.subList(from, to);
+	}
+
+	/**
+	 * Batch-resolves the permissions the requesting user holds over {@code page} — always the
+	 * post-pagination slice (≤ perPage items), never the pre-pagination collection.
+	 *
+	 * <p>{@code READ} needs no call at all: a folder is only in {@code page} because it passed the
+	 * READ filter. {@code CAN_ADD_CHILDREN} is resolved unconditionally. So the full five-type set
+	 * costs three extra calls, and requesting no permissions costs none.
+	 */
+	private PagePermissions resolvePagePermissions(final List<Folder> page,
+			final FolderSearchParams params) throws DotDataException, DotSecurityException {
+
+		final Set<String> canAddIds =
+				permissionIds(page, PermissionAPI.PERMISSION_CAN_ADD_CHILDREN, params);
+		if (!params.includePermissions()) {
+			return new PagePermissions(canAddIds, Set.of(), Set.of(), Set.of());
+		}
+		return new PagePermissions(canAddIds,
+				permissionIds(page, PermissionAPI.PERMISSION_EDIT, params),
+				permissionIds(page, PermissionAPI.PERMISSION_PUBLISH, params),
+				permissionIds(page, PermissionAPI.PERMISSION_EDIT_PERMISSIONS, params));
+	}
+
+	/**
+	 * Returns the permission ids of the folders in {@code page} that the requesting user holds
+	 * {@code permission} on.
+	 *
+	 * @param permission one of the {@code PermissionAPI.PERMISSION_*} constants
+	 */
+	private Set<String> permissionIds(final List<Folder> page, final int permission,
+			final FolderSearchParams params) throws DotDataException, DotSecurityException {
+
+		return permissionAPI.filterCollection(
+				page, permission, params.user(), params.respectFrontendRoles())
+				.stream().map(Permissionable::getPermissionId).collect(Collectors.toSet());
+	}
+
+	/**
+	 * Maps the page of folders to their REST views. Pure mapping — every value is already resolved.
+	 */
+	private static List<FolderSearchView> toViews(final List<Folder> page,
+			final PagePermissions permissions, final Set<String> parentPathsWithVisibleChildren,
+			final FolderSearchParams params) {
+
+		return page.stream()
+				.map(folder -> FolderSearchView.builder()
+						.id(folder.getIdentifier())
+						.inode(folder.getInode())
+						.name(folder.getName())
+						.path(parentPathOf(folder))
+						.addChildrenAllowed(permissions.canAddIds().contains(folder.getPermissionId()))
+						.hasChildren(parentPathsWithVisibleChildren.contains(folder.getPath()))
+						.defaultBaseType(folder.getDefaultBaseType())
+						.title(folder.getTitle())
+						.sortOrder(folder.getSortOrder())
+						.filesMasks(folder.getFilesMasks())
+						.defaultFileType(folder.getDefaultFileType())
+						.showOnMenu(folder.isShowOnMenu())
+						.permissions(params.includePermissions()
+								? permissionNames(folder, permissions)
+								: null)
+						.build())
+				.toList();
+	}
+
+	/**
+	 * Strips the folder's own name off its full path, leaving the parent path
+	 * (e.g. {@code "/application/blog/"} → {@code "/application/"}).
+	 */
+	private static String parentPathOf(final Folder folder) {
+		final String fullPath = folder.getPath();
+		return fullPath.substring(0, fullPath.length() - folder.getName().length() - 1);
+	}
+
+	/**
+	 * Builds the permission-type names granted on {@code folder}, matching the set and the spelling
+	 * the Content Drive table's folder view emits so both views gate the context menu identically.
+	 *
+	 * <p>Names come from {@link PermissionAPI.Type} constants rather than
+	 * {@link PermissionAPI.Type#getCanonicalTypes()}, which carries the {@code WRITE} alias instead
+	 * of {@code EDIT} and would emit a name no consumer checks for.
+	 */
+	private static List<String> permissionNames(final Folder folder, final PagePermissions permissions) {
+
+		final String permissionId = folder.getPermissionId();
+		final List<String> names = new ArrayList<>(5);
+		// READ is implicit: the folder only reaches this point by passing the READ filter.
+		names.add(PermissionAPI.Type.READ.name());
+		if (permissions.editableIds().contains(permissionId)) {
+			names.add(PermissionAPI.Type.EDIT.name());
+		}
+		if (permissions.publishableIds().contains(permissionId)) {
+			names.add(PermissionAPI.Type.PUBLISH.name());
+		}
+		if (permissions.editPermissionsIds().contains(permissionId)) {
+			names.add(PermissionAPI.Type.EDIT_PERMISSIONS.name());
+		}
+		if (permissions.canAddIds().contains(permissionId)) {
+			names.add(PermissionAPI.Type.CAN_ADD_CHILDREN.name());
+		}
+		return names;
+	}
+
+	/**
+	 * Returns the set of folder paths (e.g. {@code "/content/blog/"}) from {@code page} that have
+	 * at least one direct child folder readable by the requesting user. Two SQL round-trips: one to
+	 * fetch all children in bulk, one batch permission check on the result.
+	 */
+	private Set<String> findParentPathsWithVisibleChildren(
+			final List<Folder> page, final FolderSearchParams params) throws DotDataException, DotSecurityException {
+
+		final Set<String> pagePaths = page.stream().map(Folder::getPath).collect(Collectors.toSet());
+		final List<Folder> allChildren = folderFactory.findDirectChildFolders(params.siteId(), pagePaths);
+
+		if (allChildren.isEmpty()) {
+			return Set.of();
+		}
+
+		return permissionAPI
+				.filterCollection(allChildren, PermissionAPI.PERMISSION_READ,
+						params.user(), params.respectFrontendRoles())
+				.stream()
+				.map(child -> {
+					final var childPath = child.getPath();
+					return childPath.substring(0, childPath.length() - child.getName().length() - 1);
+				})
+				.collect(Collectors.toSet());
 	}
 
 	@CloseDBIfOpened
@@ -863,12 +1089,19 @@ public class FolderAPIImpl implements FolderAPI  {
 		if (!permissionAPI.doesUserHavePermission(newParentFolder, PermissionAPI.PERMISSION_CAN_ADD_CHILDREN, user, respectFrontEndPermissions)) {
 			throw new DotSecurityException("User " + (user.getUserId() != null?user.getUserId():BLANK) + " does not have permission to add to Folder " + newParentFolder.getName());
 		}
-		boolean move = folderFactory.move(folderToMove, newParentFolder);
+		// Snapshot source fields BEFORE folderFactory.move() — the source folder's
+		// DB row is deleted as part of the move, after which lazy lookups on the
+		// in-memory Folder (e.g. getPath() falling back to IdentifierAPI.find) would
+		// silently produce nulls in the event payload.
+		final Map<String, Object> sourceFields = toEventFields(folderToMove);
+		final Optional<Folder> newFolder = folderFactory.move(folderToMove, newParentFolder);
 
-		this.systemEventsAPI.pushAsync(SystemEventType.MOVE_FOLDER, new Payload(folderToMove.getMap(), Visibility.EXCLUDE_OWNER,
-				new ExcludeOwnerVerifierBean(user.getUserId(), PermissionAPI.PERMISSION_READ, Visibility.PERMISSION)));
+		if (newFolder.isPresent()) {
+			emitFolderEventOnCommit(SystemEventType.MOVE_FOLDER,
+					sourceFields, toEventFields(newFolder.get()), user);
+		}
 
-		return move;
+		return newFolder.isPresent();
 	}
 
 	@WrapInTransaction
@@ -887,11 +1120,17 @@ public class FolderAPIImpl implements FolderAPI  {
 			throw new DotSecurityException("User " + (user.getUserId() != null?user.getUserId():BLANK) + " does not have permission to add to Folder " + newParentHost.getHostname());
 		}
 
-		final boolean move = folderFactory.move(folderToMove, newParentHost);
+		// Snapshot source fields BEFORE folderFactory.move() — see comment in the
+		// Folder→Folder overload for why this matters.
+		final Map<String, Object> sourceFields = toEventFields(folderToMove);
+		final Optional<Folder> newFolder = folderFactory.move(folderToMove, newParentHost);
 
-		HibernateUtil.addCommitListener(Sneaky.sneaked(()->sendMoveFolderSystemEvent(folderToMove, user)),1000);
+		if (newFolder.isPresent()) {
+			emitFolderEventOnCommit(SystemEventType.MOVE_FOLDER,
+					sourceFields, toEventFields(newFolder.get()), user);
+		}
 
-		return move;
+		return newFolder.isPresent();
 	}
 
 	@Override
@@ -987,11 +1226,41 @@ public class FolderAPIImpl implements FolderAPI  {
 		});
 	}
 
-	private void sendMoveFolderSystemEvent (final Folder folderToMove, final User user)
-			throws DotDataException, DotSecurityException {
+	private void emitFolderEventOnCommit(final SystemEventType type,
+										 final Map<String, Object> sourceFields,
+										 final Map<String, Object> targetFields,
+										 final User user) throws DotHibernateException {
+		final Map<String, Object> payload = buildSourceTargetPayload(sourceFields, targetFields);
+		HibernateUtil.addCommitListener(Sneaky.sneaked(() ->
+				this.systemEventsAPI.pushAsync(type, new Payload(payload, Visibility.EXCLUDE_OWNER,
+						new ExcludeOwnerVerifierBean(user.getUserId(),
+								PermissionAPI.PERMISSION_READ, Visibility.PERMISSION)))), 1000);
+	}
 
-		this.systemEventsAPI.pushAsync(SystemEventType.MOVE_FOLDER, new Payload(folderToMove.getMap(), Visibility.EXCLUDE_OWNER,
-				new ExcludeOwnerVerifierBean(user.getUserId(), PermissionAPI.PERMISSION_READ, Visibility.PERMISSION)));
+	private static Map<String, Object> buildSourceTargetPayload(final Map<String, Object> sourceFields,
+																final Map<String, Object> targetFields) {
+		// PermissionVerifier wraps payload.getData() in a Contentlet and reads
+		// "identifier" to resolve the Permissionable. Folder.getPermissionId() returns
+		// the inode, so the top-level "identifier" must hold the inode value rather
+		// than the folder's actual identifier. We deliberately overwrite the entry
+		// copied from sourceFields here — in modern dotCMS folder.identifier ==
+		// folder.inode so the values match today, but this guards the verifier path
+		// against any future divergence.
+		final Map<String, Object> payload = new HashMap<>(sourceFields);
+		payload.put("identifier", sourceFields.get("inode")); // intentional overwrite
+		payload.put("source", sourceFields);
+		payload.put("target", targetFields);
+		return payload;
+	}
+
+	private static Map<String, Object> toEventFields(final Folder folder) {
+		final Map<String, Object> fields = new HashMap<>();
+		fields.put("identifier", folder.getIdentifier());
+		fields.put("inode", folder.getInode());
+		fields.put("path", folder.getPath());
+		fields.put("name", folder.getName());
+		fields.put("hostId", folder.getHostId());
+		return fields;
 	}
 
 
@@ -1053,6 +1322,24 @@ public class FolderAPIImpl implements FolderAPI  {
         cond.live=true;
         cond.deleted=false;
 		final List list = folderFactory.getChildrenClass(parent, Link.class, cond);
+
+		return permissionAPI.filterCollection(list, PermissionAPI.PERMISSION_READ, respectFrontEndPermissions, user);
+	}
+
+	@CloseDBIfOpened
+	@Override
+	public List<Link> getLiveLinks(final Host host, final User user,
+								   final boolean respectFrontEndPermissions)
+								   throws DotDataException, DotSecurityException {
+
+		if (!permissionAPI.doesUserHavePermission(host, PermissionAPI.PERMISSION_READ, user, respectFrontEndPermissions)) {
+			throw new DotSecurityException("User " + (user.getUserId() != null?user.getUserId():BLANK) + " does not have permission to read Host " + host.getHostname());
+		}
+
+		final ChildrenCondition cond = new ChildrenCondition();
+        cond.live=true;
+        cond.deleted=false;
+		final List list = folderFactory.getChildrenClass(host, Link.class, cond);
 
 		return permissionAPI.filterCollection(list, PermissionAPI.PERMISSION_READ, respectFrontEndPermissions, user);
 	}
@@ -1221,15 +1508,17 @@ public class FolderAPIImpl implements FolderAPI  {
 
 			try {
 
-				final String name = contentlet instanceof  IFileAsset?
-						IFileAsset.class.cast(contentlet).getFileName(): (String)contentlet.getMap().get("fileName");
+				final String name = contentlet instanceof IFileAsset ifa
+						? ifa.getFileName()
+						: (String) contentlet.getMap().get("fileName");
 
 				if (null != childNameFilter && !childNameFilter.test(name)) {
 					return;
 				}
 
-				final String fileAssetFolderParentId = contentlet instanceof  IFileAsset?
-						IFileAsset.class.cast(contentlet).getParent(): (String)contentlet.getMap().get(Contentlet.FOLDER_KEY);
+				final String fileAssetFolderParentId = contentlet instanceof IFileAsset ifa
+						? ifa.getParent()
+						: (String) contentlet.getMap().get(Contentlet.FOLDER_KEY);
 
 				final Folder childFolder = this.find(fileAssetFolderParentId, APILocator.systemUser(), false);
 				if (null != childFolder && this.isChildFolder(childFolder, parentFolder)) {
@@ -1291,7 +1580,7 @@ public class FolderAPIImpl implements FolderAPI  {
 			map.put("entries", entry.get("total"));
 			return map;
 
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 	@CloseDBIfOpened
